deploy/k8s/http-behind-ingress/tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.clickonetwo.service: tracker
  name: tracker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: http-udp
      port: 80
      protocol: UDP
      targetPort: 80
  selector:
    io.clickonetwo.service: tracker
