deploy/k8s/http-behind-ingress/lcs-ulecs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lcs-ulecs
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - lcs-ulecs.adobe.io
    secretName: lcs-ulecs
  rules:
  - host: lcs-ulecs.adobe.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracker
            port:
              number: 80
